chages on my files

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -13,10 +13,17 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+    - name: Test
+      id: test
+      uses: classroom-resources/autograding-python-grader@v1
       with:
         timeout: 10
         max-score: 1
-        setup-command: pip3 install -r requirements
+        setup-command: pip3 install -r requirements.txt
     - name: Autograding Reporter
       uses: classroom-resources/autograding-grading-reporter@v1
+      env:
+        TEST_RESULTS: "${{steps.test.outputs.result}}"
+      with:
+        runners: test
 
